--- a/css/foundation.css
+++ b/css/foundation.css
@@ -39,7 +39,7 @@ body {
   font-size: 100%; }
 
 body {
-  background: #CFCFCF;
+  background: #F5F5F5;
   color: #222222;
   padding: 0;
   margin: 0;
@@ -1901,13 +1901,12 @@ meta.foundation-mq-topbar {
 
 /* Barra */
 .barra {
-	border-style: solid;
-	border-width: 1px;
-	border-color: #d8d8d8;
-	border-radius: 5px;
-	padding: 1.25rem;
-	color: #2B2B2B;
-	background: #14A6EB;
+	padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+	background: #2daebf;
+  margin-top: -0.5rem;
 }
 .barra p{
 	margin-top: -10px;
@@ -1918,10 +1917,14 @@ meta.foundation-mq-topbar {
   border-style: solid;
   border-width: 1px;
   border-color: #d8d8d8;
-  border-radius: 5px;
   margin-bottom: 1.25rem;
+  margin-top: 1.25rem;
   padding: 1.25rem;
-  background: #14A6EB; }
+  background: #2daebf;
+   }
+  /*
+    background: #14A6EB;
+  */
   .panel > :first-child {
     margin-top: 0; }
   .panel > :last-child {
@@ -2827,7 +2830,7 @@ td {
 
 /* Default Link Styles */
 a {
-  color: #333333;
+  color: white;
   text-decoration: none;
   line-height: inherit; }
   a:hover, a:focus {
@@ -2839,12 +2842,18 @@ a {
 
 /* Default paragraph styles */
 p {
-  font-family: inherit;
-  font-weight: normal;
-  font-size: 1rem;
-  line-height: 1.6;
-  margin-bottom: 1.25rem;
-  text-rendering: optimizeLegibility; }
+	font-family: inherit;
+	font-weight: normal;
+	font-size: 1rem;
+	line-height: 1.6;
+	margin-bottom: 1.25rem;
+	text-rendering: optimizeLegibility;
+	background-color: 333333;
+	padding-top: 5px;
+	padding-bottom: 8px;
+	padding-right: 5px;
+	padding-left: 5px;
+}
   p.lead {
     font-size: 1.21875rem;
     line-height: 1.6; }
@@ -2858,7 +2867,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
-  color: #222222;
+  color: #B0B0B0;
   text-rendering: optimizeLegibility;
   margin-top: 0.2rem;
   margin-bottom: 0.5rem;
@@ -2869,7 +2878,9 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 0; }
 
 h1 {
-  font-size: 2.125rem; }
+	font-size: 2.125rem;
+	background-color: #333333;
+}
 
 h2 {
   font-size: 1.6875rem; }
