--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,7 @@
 	color:#FFFFFF;
 	padding-top:11px;
 	padding-bottom:11px;
-	text-align: center
+	text-align: center;
 }
 .MenuOn{
 	background-color:#f4d000;
@@ -13,7 +13,7 @@
 	display:inline-block;
 	padding-top:11px;
 	padding-bottom:11px;
-	text-align: center
+	text-align: center;
 }
 
 div.Menu {
