--- a/css/estilos.css
+++ b/css/estilos.css
@@ -29,6 +29,13 @@
 	opacity:0.95;
 	filter:alpha(opacity=95); /* For IE8 and earlier */
 	z-index:100;
+}.divNumerosUsr{
+	font-size: 80px;
+	height:100px;
+	background-color: white;
+	display:inline-block;
+	margin-top: 275px;
+	z-index: 5;
 }
 div.Menu {
 	color: #0000D9;
