--- a/css/estilos.css
+++ b/css/estilos.css
@@ -31,13 +31,14 @@
 	z-index:100;
 
 	background-color: #7CB6C2;
-	background-image:-webkit-gradient(  
-    linear,  
-    right top,  
-    left bottom,  
-    color-stop(0.1, #94DAE8),  
-    color-stop(0.3, #87C7D4),  
-    color-stop(0.9, #7CB6C2));
+	background-image:-webkit-gradient(
+		linear,
+		right top,
+		left bottom,
+		color-stop(0.1, #94DAE8),
+		color-stop(0.3, #87C7D4),
+		color-stop(0.9, #7CB6C2)
+    );
 }.divNumerosUsrCls{
 	width: 70px;
 	height:85px;
@@ -56,6 +57,14 @@
 	margin-top: 63px;
 	z-index: 6;
 	color: #239baa;
+}.puntuacion{
+	z-index: 99;
+	padding-left: 620px;
+	margin-top: 420px;
+	position: absolute;
+	font-size: 50px;
+	font-family: DFPOP1-W9;
+	color: #99F6FF;
 }
 div.Menu {
 	color: #0000D9;
